# turing_recursion

./: README.md  pyproject.toml
notebooks/: rule110.ipynb  turing_periodic.ipynb  turing_periodic_clockwise.ipynb  turing_periodic_clockwise_no_marking.ipynb
turing_recursion/lib/: turing.py
